# iac

./: .gitmodules  CMakeLists.txt  README.md  endpoint.cpp  endpoint.hpp  logging.hpp  network_types.hpp  node.cpp  node.hpp  package.cpp  package.hpp  python_bindings.cpp  sonar-project.properties
.github/workflows/: cmake.yml
network_visualization/: network_visualization.cpp  network_visualization.hpp
network_visualization/site/: d3.js  index.html  main.js  style.css
python_bindings/: CMakeLists.txt  python_bindings.cpp
src/: CMakeLists.txt  buffer_rw.cpp  buffer_rw.hpp  endpoint.cpp  endpoint.hpp  exceptions.hpp  forward.hpp  iac.hpp  local_endpoint.cpp  local_endpoint.hpp  local_node.cpp  local_node.hpp  local_node_api.cpp  local_node_package_handling.cpp  local_node_state_handling.cpp  local_transport_route.cpp  local_transport_route.hpp  local_transport_route_utilities.hpp  logging.cpp  logging.hpp  network.cpp  network.hpp  network_types.hpp  node.cpp  node.hpp  package.cpp  package.hpp
src/connection_types/: connection.cpp  connection.hpp  esp8266_socket_connection.cpp  esp8266_socket_connection.hpp  latent_loopback_connection.hpp  loopback_connection.cpp  loopback_connection.hpp  socket_connection.cpp  socket_connection.hpp
src/network_visualization/: CMakeLists.txt  json_writer.cpp  json_writer.hpp  network_visualization.cpp  network_visualization.hpp
src/network_visualization/site/: index.html  main.js  network.js  style.css
src/std_provider/: limits.hpp  printf.hpp  queue.hpp  string.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  vector.hpp
src/transport_routes/: CMakeLists.txt  local_transport_route.cpp  local_transport_route.hpp  loopback_transport_route.cpp  loopback_transport_route.hpp  socket_transport_route.cpp  socket_transport_route.hpp  socket_transport_route_arduino.cpp  socket_transport_route_arduino.hpp  transport_route.cpp  transport_route.hpp
std_provider/: limits.hpp  printf.hpp  queue.hpp  string.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  vector.hpp
tests/: CMakeLists.txt  test_disconnect_reconnect.hpp  test_logging.cpp  test_logging.hpp  test_lw_list.hpp  test_lw_pair.hpp  test_lw_queue.hpp  test_lw_unordered_map.hpp  test_lw_unordered_set.hpp  test_lw_vector.hpp  test_network_building.hpp  test_network_visualization.hpp  test_send_receive.hpp  test_utilities.hpp  testing.cpp
transport_routes/: CMakeLists.txt  loopback_transport_route.cpp  socket_transport_route.cpp  socket_transport_route.hpp  socket_transport_route_arduino.cpp  socket_transport_route_arduino.hpp  transport_route.hpp
